# benchmarks

./: .gitignore  README.md  benchmarks.toml  pyproject.toml
benchmarks/: bench.py  clean.py  console.py  display.py  fetch.py  measure.py  program.py  result.py  utilities.py
makefiles/: ubuntu.22.04.make
output/: dependencies.list  summary.json
output/results/: fannkuchredux-1.java.10.json  fannkuchredux-1.java.11.json  fannkuchredux-1.java.12.json  fannkuchredux-1.java.13.json  fannkuchredux-1.java.9.json  fannkuchredux-2.c.10.json  fannkuchredux-2.c.11.json  fannkuchredux-2.c.12.json  fannkuchredux-2.c.13.json  fannkuchredux-2.c.9.json  fannkuchredux-2.java.10.json  fannkuchredux-2.java.11.json  fannkuchredux-2.java.12.json  fannkuchredux-2.java.13.json  fannkuchredux-2.java.9.json  fannkuchredux-2.rust.10.json  fannkuchredux-2.rust.11.json  fannkuchredux-2.rust.12.json  fannkuchredux-2.rust.13.json  fannkuchredux-2.rust.9.json  fannkuchredux-3.ada.10.json  fannkuchredux-3.ada.11.json  fannkuchredux-3.ada.12.json  fannkuchredux-3.ada.13.json  fannkuchredux-3.ada.9.json  fannkuchredux-3.c.10.json  fannkuchredux-3.c.11.json  fannkuchredux-3.c.12.json  fannkuchredux-3.c.13.json  fannkuchredux-3.c.9.json  fannkuchredux-3.java.10.json  fannkuchredux-3.java.11.json  fannkuchredux-3.java.12.json  fannkuchredux-3.java.13.json  fannkuchredux-3.java.9.json  fannkuchredux-4.c.10.json  fannkuchredux-4.c.11.json  (+267 more)
scripts/: discover.sh  download.py  download.sh  download_raw.sh  install_gcc_toolchain.sh  install_gpp_toolchain.sh  install_rust_toolchain.sh  scratch.sh
(+143 files in other folders)
