[tool.poetry]
name = "benchmarks"
description = "A benchmark tool based on benchmarksgame"
version = "0.1.0"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = [ "Michael House <mjhouse@monolith.solutions>" ]
keywords = ["benchmarks", "rust"]

[tool.poetry.scripts]
bench = 'benchmarks.bench:run'
fetch = 'benchmarks.fetch:run'
clean = 'benchmarks.clean:run'
display = 'benchmarks.display:run'

[tool.poetry.dependencies]
python = ">=3.8,<4"
psutil = "^5.9.4"
toml = "^0.10.2"
argparse = "^1.4.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
pydantic = "^1.10.7"
matplotlib = "^3.7.1"

